// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loginTests login page renders correctly for gwcloud 1`] = `
<div
  className="h-100 container-fluid"
>
  <div
    className="h-100 row"
  >
    <div
      className="text-center d-none d-lg-block col-lg-6"
      style={
        Object {
          "background": "url(ligo-livingston-blue.png) no-repeat center",
          "backgroundSize": "cover",
          "minHeight": "100px",
        }
      }
    >
      <h1
        className="login-logo"
        style={
          Object {
            "color": "#F0FAFF",
            "marginTop": "197px",
          }
        }
      >
        <img
          src="GWC-Green192-768x521.png"
          style={
            Object {
              "height": "4rem",
              "marginBottom": "8px",
            }
          }
        />
         GWCloud
      </h1>
    </div>
    <img
      className="d-none d-lg-block"
      src="GWDC_grey_full_571x150.png"
      style={
        Object {
          "height": "3rem",
          "left": "50%",
          "margin": "1rem 0 0 1rem",
          "position": "absolute",
        }
      }
    />
    <img
      className="d-lg-none d-xs-block"
      src="GWDC_grey_full_571x150.png"
      style={
        Object {
          "height": "3rem",
          "margin": "1rem 0 0 1rem",
          "position": "absolute",
        }
      }
    />
    <div
      className="align-self-center col"
      style={
        Object {
          "marginTop": "5rem",
        }
      }
    >
      <div
        className="justify-content-md-center row"
      >
        <div
          className="col-lg-8 col-md-10"
        >
          <h1
            className="login-logo pb-5 d-xs-block d-lg-none"
          >
            <img
              className="pr-3"
              src="GWCloud-logo-blue.png"
              style={
                Object {
                  "height": "4rem",
                  "marginBottom": "8px",
                }
              }
            />
            GWCloud
          </h1>
          <h2
            className="mb-4"
          >
            Sign in
          </h2>
          <a
            className="mb-4 btn btn-primary btn-block btn-lg"
            href="/auth/ligo/?domain=gwcloud"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            Continue with LIGO authentication
          </a>
          <p
            className="pb-5"
          >
            Interested in joining the LIGO Scientific Collaboration? 
            <br />
            <a
              href="https://www.ligo.org/about/join.php"
            >
               Apply to join
            </a>
          </p>
          <h5
            className="mb-4 mt-5"
          >
            Continue with your GWCloud account
          </h5>
          <form
            className=""
          >
            <div
              className="form-group"
            >
              <label
                className="form-label"
                htmlFor="username"
              >
                Username
              </label>
              <input
                className="form-control"
                id="username"
                onChange={[Function]}
                value=""
              />
              <div
                className="invalid-feedback"
              />
            </div>
            <div
              className="form-group"
            >
              <label
                className="form-label"
                htmlFor="password"
              >
                Password
              </label>
              <input
                className="form-control"
                id="password"
                onChange={[Function]}
                type="password"
                value=""
              />
              <div
                className="invalid-feedback"
              />
            </div>
            <button
              className="mb-4 btn btn-primary btn-block btn-lg"
              disabled={false}
              onClick={[Function]}
              type="submit"
            >
              Log in
            </button>
          </form>
          <a
            onClick={[Function]}
          >
            Need a GWCloud account?
          </a>
        </div>
      </div>
      <div
        className="justify-content-md-center row"
        style={
          Object {
            "margin": "4rem 0 2rem 0",
          }
        }
      >
        <div
          className="col-md-8"
        >
          <div
            className="align-items-end row"
          >
            <div
              className="col"
            >
              <img
                src="ncris_logo.png"
                style={
                  Object {
                    "maxHeight": "4rem",
                    "maxWidth": "100%",
                  }
                }
              />
            </div>
            <div
              className="text-center col"
            >
              <img
                src="ozgrav-logo-array-tk005-final-invert-textedit.png"
                style={
                  Object {
                    "maxHeight": "4.5rem",
                    "maxWidth": "100%",
                  }
                }
              />
            </div>
            <div
              className="text-right col"
            >
              <img
                src="aal-logo-rp-revised-wwording-800px.png"
                style={
                  Object {
                    "maxHeight": "3rem",
                    "maxWidth": "100%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-lg-6 col-md-12 offset-lg-6"
    />
  </div>
</div>
`;

exports[`loginTests login page renders correctly for gwlab 1`] = `
<div
  className="h-100 container-fluid"
>
  <div
    className="h-100 row"
  >
    <div
      className="text-center d-none d-lg-block col-lg-6"
      style={
        Object {
          "background": "url(ligo-livingston-blue.png) no-repeat center",
          "backgroundSize": "cover",
          "minHeight": "100px",
        }
      }
    >
      <h1
        className="login-logo"
        style={
          Object {
            "color": "#F0FAFF",
            "marginTop": "197px",
          }
        }
      >
        <img
          src="GWC-Green192-768x521.png"
          style={
            Object {
              "height": "4rem",
              "marginBottom": "8px",
            }
          }
        />
         GWCloud
      </h1>
    </div>
    <img
      className="d-none d-lg-block"
      src="GWDC_grey_full_571x150.png"
      style={
        Object {
          "height": "3rem",
          "left": "50%",
          "margin": "1rem 0 0 1rem",
          "position": "absolute",
        }
      }
    />
    <img
      className="d-lg-none d-xs-block"
      src="GWDC_grey_full_571x150.png"
      style={
        Object {
          "height": "3rem",
          "margin": "1rem 0 0 1rem",
          "position": "absolute",
        }
      }
    />
    <div
      className="align-self-center col"
      style={
        Object {
          "marginTop": "5rem",
        }
      }
    >
      <div
        className="justify-content-md-center row"
      >
        <div
          className="col-lg-8 col-md-10"
        >
          <h1
            className="login-logo pb-5 d-xs-block d-lg-none"
          >
            <img
              className="pr-3"
              src="GWCloud-logo-blue.png"
              style={
                Object {
                  "height": "4rem",
                  "marginBottom": "8px",
                }
              }
            />
            GWCloud
          </h1>
          <h2
            className="mb-4"
          >
            Sign in
          </h2>
          <a
            className="mb-4 btn btn-primary btn-block btn-lg"
            href="/auth/ligo/?domain=gwlab"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            Continue with LIGO authentication
          </a>
          <p
            className="pb-5"
          >
            Interested in joining the LIGO Scientific Collaboration? 
            <br />
            <a
              href="https://www.ligo.org/about/join.php"
            >
               Apply to join
            </a>
          </p>
          <h5
            className="mb-4 mt-5"
          >
            Continue with your GWCloud account
          </h5>
          <form
            className=""
          >
            <div
              className="form-group"
            >
              <label
                className="form-label"
                htmlFor="username"
              >
                Username
              </label>
              <input
                className="form-control"
                id="username"
                onChange={[Function]}
                value=""
              />
              <div
                className="invalid-feedback"
              />
            </div>
            <div
              className="form-group"
            >
              <label
                className="form-label"
                htmlFor="password"
              >
                Password
              </label>
              <input
                className="form-control"
                id="password"
                onChange={[Function]}
                type="password"
                value=""
              />
              <div
                className="invalid-feedback"
              />
            </div>
            <button
              className="mb-4 btn btn-primary btn-block btn-lg"
              disabled={false}
              onClick={[Function]}
              type="submit"
            >
              Log in
            </button>
          </form>
          <a
            onClick={[Function]}
          >
            Need a GWCloud account?
          </a>
        </div>
      </div>
      <div
        className="justify-content-md-center row"
        style={
          Object {
            "margin": "4rem 0 2rem 0",
          }
        }
      >
        <div
          className="col-md-8"
        >
          <div
            className="align-items-end row"
          >
            <div
              className="col"
            >
              <img
                src="ncris_logo.png"
                style={
                  Object {
                    "maxHeight": "4rem",
                    "maxWidth": "100%",
                  }
                }
              />
            </div>
            <div
              className="text-center col"
            >
              <img
                src="ozgrav-logo-array-tk005-final-invert-textedit.png"
                style={
                  Object {
                    "maxHeight": "4.5rem",
                    "maxWidth": "100%",
                  }
                }
              />
            </div>
            <div
              className="text-right col"
            >
              <img
                src="aal-logo-rp-revised-wwording-800px.png"
                style={
                  Object {
                    "maxHeight": "3rem",
                    "maxWidth": "100%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-lg-6 col-md-12 offset-lg-6"
    />
  </div>
</div>
`;

exports[`loginTests login page renders correctly for gwlandscape 1`] = `
<div
  className="h-100 container-fluid"
>
  <div
    className="h-100 row"
  >
    <div
      className="text-center d-none d-lg-block col-lg-6"
      style={
        Object {
          "background": "url(ligo-livingston-blue.png) no-repeat center",
          "backgroundSize": "cover",
          "minHeight": "100px",
        }
      }
    >
      <h1
        className="login-logo"
        style={
          Object {
            "color": "#F0FAFF",
            "marginTop": "197px",
          }
        }
      >
        <img
          src="GWC-Green192-768x521.png"
          style={
            Object {
              "height": "4rem",
              "marginBottom": "8px",
            }
          }
        />
         GWCloud
      </h1>
    </div>
    <img
      className="d-none d-lg-block"
      src="GWDC_grey_full_571x150.png"
      style={
        Object {
          "height": "3rem",
          "left": "50%",
          "margin": "1rem 0 0 1rem",
          "position": "absolute",
        }
      }
    />
    <img
      className="d-lg-none d-xs-block"
      src="GWDC_grey_full_571x150.png"
      style={
        Object {
          "height": "3rem",
          "margin": "1rem 0 0 1rem",
          "position": "absolute",
        }
      }
    />
    <div
      className="align-self-center col"
      style={
        Object {
          "marginTop": "5rem",
        }
      }
    >
      <div
        className="justify-content-md-center row"
      >
        <div
          className="col-lg-8 col-md-10"
        >
          <h1
            className="login-logo pb-5 d-xs-block d-lg-none"
          >
            <img
              className="pr-3"
              src="GWCloud-logo-blue.png"
              style={
                Object {
                  "height": "4rem",
                  "marginBottom": "8px",
                }
              }
            />
            GWCloud
          </h1>
          <h2
            className="mb-4"
          >
            Sign in
          </h2>
          <a
            className="mb-4 btn btn-primary btn-block btn-lg"
            href="/auth/ligo/?domain=gwlandscape"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            Continue with LIGO authentication
          </a>
          <p
            className="pb-5"
          >
            Interested in joining the LIGO Scientific Collaboration? 
            <br />
            <a
              href="https://www.ligo.org/about/join.php"
            >
               Apply to join
            </a>
          </p>
          <h5
            className="mb-4 mt-5"
          >
            Continue with your GWCloud account
          </h5>
          <form
            className=""
          >
            <div
              className="form-group"
            >
              <label
                className="form-label"
                htmlFor="username"
              >
                Username
              </label>
              <input
                className="form-control"
                id="username"
                onChange={[Function]}
                value=""
              />
              <div
                className="invalid-feedback"
              />
            </div>
            <div
              className="form-group"
            >
              <label
                className="form-label"
                htmlFor="password"
              >
                Password
              </label>
              <input
                className="form-control"
                id="password"
                onChange={[Function]}
                type="password"
                value=""
              />
              <div
                className="invalid-feedback"
              />
            </div>
            <button
              className="mb-4 btn btn-primary btn-block btn-lg"
              disabled={false}
              onClick={[Function]}
              type="submit"
            >
              Log in
            </button>
          </form>
          <a
            onClick={[Function]}
          >
            Need a GWCloud account?
          </a>
        </div>
      </div>
      <div
        className="justify-content-md-center row"
        style={
          Object {
            "margin": "4rem 0 2rem 0",
          }
        }
      >
        <div
          className="col-md-8"
        >
          <div
            className="align-items-end row"
          >
            <div
              className="col"
            >
              <img
                src="ncris_logo.png"
                style={
                  Object {
                    "maxHeight": "4rem",
                    "maxWidth": "100%",
                  }
                }
              />
            </div>
            <div
              className="text-center col"
            >
              <img
                src="ozgrav-logo-array-tk005-final-invert-textedit.png"
                style={
                  Object {
                    "maxHeight": "4.5rem",
                    "maxWidth": "100%",
                  }
                }
              />
            </div>
            <div
              className="text-right col"
            >
              <img
                src="aal-logo-rp-revised-wwording-800px.png"
                style={
                  Object {
                    "maxHeight": "3rem",
                    "maxWidth": "100%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-lg-6 col-md-12 offset-lg-6"
    />
  </div>
</div>
`;
